# subly

./: CLAUDE.md  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.json
docs/: architecture.md  development-guidelines.md  functional-design.md  glossary.md  privacy-implementation-status.md  (+2 more)
subly_devnet/: Anchor.toml  Arcium.toml  Cargo.toml  README.md  package-lock.json  package.json  txtx.yml
subly_devnet/encrypted-ixs/: Cargo.toml
subly_devnet/encrypted-ixs/src/: lib.rs
subly_devnet/programs/subly_devnet/: Cargo.toml
subly_devnet/programs/subly_devnet/src/: constants.rs  errors.rs  events.rs  lib.rs
subly_devnet/programs/subly_devnet/src/arcium/: constants.rs  mod.rs
subly_devnet/programs/subly_devnet/src/instructions/: migrate_to_zk.rs  mod.rs  subscribe_zk.rs  verify_membership.rs
subly_devnet/programs/subly_devnet/src/state/: business.rs  compressed_subscription.rs  mod.rs  mxe.rs  plan.rs  subscription.rs
subly_devnet/runbooks/: README.md
subly_devnet/runbooks/deployment/: main.tx  subgraphs.localnet.tx
subly_devnet/scripts/: check-cluster-offsets.ts  check-devnet-cluster.ts  check-mxe-config.ts  devnet-arcium-test.ts  devnet-test.ts  init-comp-def.ts
subly_devnet/sdk/: README.md  jest.config.js  package-lock.json  package.json
subly_devnet/sdk/src/: client.ts  index.ts
subly_devnet/sdk/src/proof/: generator.test.ts  generator.ts  index.ts  security.test.ts  verifier.test.ts  verifier.ts
subly_devnet/sdk/src/types/: arcium.ts  index.ts  proof.ts
subly_devnet/tests/: arcium_integration.ts  subly_devnet.ts
(+360 files in other folders)
