[workspace]
members = ["programs/*", "encrypted-ixs"]
resolver = "2"

[workspace.dependencies]
# Pin versions to avoid Rust edition 2024 issues with older Solana SBF toolchain
constant_time_eq = "=0.3.1"
const-oid = "=0.9.6"
blake3 = "=1.5.5"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

