[package]
name = "subly_devnet"
version = "0.1.0"
description = "Created with Arcium & Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "subly_devnet"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "arcium-anchor/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
arcium-client = { default-features = false, version = "0.5.4" }
arcium-macros = "0.5.4"
arcium-anchor = "0.5.4"

# Light Protocol for ZK Compression
light-sdk = { version = "0.17", features = ["anchor", "v2"] }
light-sdk-types = { version = "0.17", features = ["v2"] }
light-hasher = "5.0"
borsh = "0.10"
borsh-derive = "0.10"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
